apps/staging/sure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sure
  namespace: sure
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - secretName: sure-tls
      hosts:
        - sure.christophervestman.com
  rules:
    - host: sure.christophervestman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sure
                port:
                  number: 3000
